syntax = "proto3";

package syntrix.query.v1;

option go_package = "github.com/syntrixbase/syntrix/api/gen/query/v1;queryv1";

// QueryService provides document operations and query execution.
// Supports both local (in-process) and remote (gRPC) modes.
service QueryService {
  // GetDocument retrieves a document by its path.
  rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse);

  // CreateDocument creates a new document.
  rpc CreateDocument(CreateDocumentRequest) returns (CreateDocumentResponse);

  // ReplaceDocument replaces an existing document with optional filters.
  rpc ReplaceDocument(ReplaceDocumentRequest) returns (ReplaceDocumentResponse);

  // PatchDocument partially updates an existing document with optional filters.
  rpc PatchDocument(PatchDocumentRequest) returns (PatchDocumentResponse);

  // DeleteDocument removes a document by its path with optional filters.
  rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse);

  // ExecuteQuery executes a query and returns matching documents.
  rpc ExecuteQuery(ExecuteQueryRequest) returns (ExecuteQueryResponse);

  // Pull retrieves documents for replication.
  rpc Pull(PullRequest) returns (PullResponse);

  // Push sends documents for replication.
  rpc Push(PushRequest) returns (PushResponse);
}

// ============================================================================
// Common Types
// ============================================================================

// Document represents a stored document.
// The document data is stored as JSON bytes for flexibility.
message Document {
  // Unique document identifier (database_id:hash(fullpath)).
  string id = 1;

  // Database identifier.
  string database_id = 2;

  // Full pathname of the document.
  string fullpath = 3;

  // Parent collection name.
  string collection = 4;

  // Compact hash of collection for shorter indexes.
  string collection_hash = 5;

  // Parent of collection.
  string parent = 6;

  // Timestamp of last update (Unix milliseconds).
  int64 updated_at = 7;

  // Timestamp of creation (Unix milliseconds).
  int64 created_at = 8;

  // Optimistic concurrency control version.
  int64 version = 9;

  // Document data as JSON bytes.
  bytes data = 10;

  // Whether the document is soft-deleted.
  bool deleted = 11;
}

// Filter defines a single match condition.
// Operators: eq (==), ne (!=), gt (>), gte (>=), lt (<), lte (<=), in, contains
message Filter {
  // Field path to match (e.g., "_id", "status", "nested.field").
  string field = 1;

  // Comparison operator.
  string op = 2;

  // Value to compare against (JSON-encoded).
  bytes value = 3;
}

// OrderBy defines a sort order for query results.
message OrderBy {
  // Field to sort by.
  string field = 1;

  // Sort direction: "asc" or "desc".
  string direction = 2;
}

// Query defines a query specification.
message Query {
  // Target collection.
  string collection = 1;

  // Filter conditions (ANDed together).
  repeated Filter filters = 2;

  // Sort order.
  repeated OrderBy order_by = 3;

  // Maximum number of results to return.
  int32 limit = 4;

  // Pagination cursor (start after this document path).
  string start_after = 5;

  // Whether to include soft-deleted documents.
  bool show_deleted = 6;
}

// ============================================================================
// GetDocument
// ============================================================================

message GetDocumentRequest {
  // Database identifier.
  string database = 1;

  // Document path.
  string path = 2;
}

message GetDocumentResponse {
  // The retrieved document.
  Document document = 1;
}

// ============================================================================
// CreateDocument
// ============================================================================

message CreateDocumentRequest {
  // Database identifier.
  string database = 1;

  // Document to create.
  Document document = 2;
}

message CreateDocumentResponse {
  // Empty on success.
}

// ============================================================================
// ReplaceDocument
// ============================================================================

message ReplaceDocumentRequest {
  // Database identifier.
  string database = 1;

  // Document with new data.
  Document document = 2;

  // Optional filters for conditional update.
  repeated Filter filters = 3;
}

message ReplaceDocumentResponse {
  // The updated document.
  Document document = 1;
}

// ============================================================================
// PatchDocument
// ============================================================================

message PatchDocumentRequest {
  // Database identifier.
  string database = 1;

  // Document with partial data to merge.
  Document document = 2;

  // Optional filters for conditional update.
  repeated Filter filters = 3;
}

message PatchDocumentResponse {
  // The updated document.
  Document document = 1;
}

// ============================================================================
// DeleteDocument
// ============================================================================

message DeleteDocumentRequest {
  // Database identifier.
  string database = 1;

  // Document path.
  string path = 2;

  // Optional filters for conditional delete.
  repeated Filter filters = 3;
}

message DeleteDocumentResponse {
  // Empty on success.
}

// ============================================================================
// ExecuteQuery
// ============================================================================

message ExecuteQueryRequest {
  // Database identifier.
  string database = 1;

  // Query specification.
  Query query = 2;
}

message ExecuteQueryResponse {
  // Matching documents.
  repeated Document documents = 1;
}

// ============================================================================
// Replication: Pull
// ============================================================================

message PullRequest {
  // Database identifier.
  string database = 1;

  // Target collection.
  string collection = 2;

  // Checkpoint to resume from (Unix milliseconds).
  int64 checkpoint = 3;

  // Maximum number of documents to return.
  int32 limit = 4;
}

message PullResponse {
  // Documents to replicate.
  repeated Document documents = 1;

  // New checkpoint for next pull.
  int64 checkpoint = 2;
}

// ============================================================================
// Replication: Push
// ============================================================================

message PushChange {
  // Document to push.
  Document document = 1;

  // Base version known to the client (for conflict detection).
  // Use -1 or omit to skip conflict detection.
  int64 base_version = 2;
}

message PushRequest {
  // Database identifier.
  string database = 1;

  // Target collection.
  string collection = 2;

  // Changes to push.
  repeated PushChange changes = 3;
}

message PushResponse {
  // Documents that conflicted during push.
  repeated Document conflicts = 1;
}
